--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <h3>Instituição</h3>
+            <img class="logo" src="assets/logo_branco.png" alt="">
             <ul>
                 <li><a href="">Início</a></li>
                 <li><a href="">Sobre</a></li>
@@ -23,101 +23,104 @@
         </nav>
     </header>
     <main>
-         <section>
+        <section id="inicio">
             <h1>Juntos Contra a Violência Doméstica</h1>
             <p>Estamos unidos para criar um mundo onde todos possam viver sem medo, com dignidade e respeito.</p>
-         </section>
+        </section>
 
-         <article>
+        <article id="sobre" class="cards">
             <h2>Como podemos ajudar?</h2>
-            <div>
-                <div>
-                    <img src="" alt="" />
-                    <h5>Como ajudar?</h5>
-                </div>
-                <p>Descubra maneiras eficazes de oferecer suporte a alguém em situação de violência.</p>
-                <a href="">Leia mais</a>
-            </div>
-            <div>
-                <div>
-                    <img src="" alt="" />
-                    <h5>Sinais de alerta</h5>
-                </div>
-                <p>Aprenda a identificar comportamentos abusivos e situações de risco para prevenir a violência.</p>
-                <a href="">Leia mais</a>
-            </div>
-            <div>
-                <div>
-                    <img src="" alt="" />
-                    <h5>Perfil do agressor</h5>
-                </div>
-                <p>Entenda os padrões de comportamento comuns em agressores para prevenir situações de risco.</p>
-                <a href="">Leia mais</a>
-            </div>
-         </article>
 
-         <article>
+            <div class="card__container">
+                <div class="card">
+                    <div class="card__titulo">
+                        <img src="assets/interrogacao.png" alt="" />
+                        <h5>Como ajudar?</h5>
+                    </div>
+                    <p>Descubra maneiras eficazes de oferecer suporte a alguém em situação de violência.</p>
+                    <a href="" class="card__link">Leia mais</a>
+                </div>
+
+                <div class="card">
+                    <div class="card__titulo">
+                        <img src="assets/warning.png" alt="" />
+                        <h5>Sinais de alerta</h5>
+                    </div>
+                    <p>Aprenda a identificar comportamentos abusivos e situações de risco para prevenir a violência.</p>
+                    <a href="" class="card__link">Leia mais</a>
+                </div>
+
+                <div class="card">
+                    <div class="card__titulo">
+                        <img src="assets/grupo.png" alt="" />
+                        <h5>Perfil do agressor</h5>
+                    </div>
+                    <p>Entenda os padrões de comportamento comuns em agressores para prevenir situações de risco.</p>
+                    <a href="" class="card__link">Leia mais</a>
+                </div>
+           </div>
+        </article>
+
+        <article class="help">
             <h4>Recursos de ajuda</h4>
-            <p>Se você ou alguém que você conhece precisa de apoio, saiba que existem recursos confiáveis prontos para ajudar. Não hesite em buscar ajuda!"</p>
-            <div>
-                <div>
-                    <img src="" alt="" />
-                    <h5>Linha de Ajuda Nacional</h5>
+            <p class="paragrafo__cima">Se você ou alguém que você conhece precisa de apoio, saiba que existem recursos confiáveis prontos para ajudar. Não hesite em buscar ajuda!"</p>
+            <div class="help__container">
+                <div class="secao">
+                    <div class="secao__titulo">
+                        <img src="assets/tel.png" alt="" />
+                        <h5>Linha de Ajuda Nacional</h5>
+                    </div>
+                    <p class="paragrafo__baixo">Disque 100 - Disque Direitos Humanos</p>
+                    <ul>
+                        <li>Disponível 24 horas por dia, 7 dias por semana</li>
+                        <li>Atendimento em português, espanhol e inglês</li>
+                        <li>Orientação sobre os direitos e serviços públicos</li>
+                        <li>Encaminhamento para outros serviços, quando necessário</li>
+                    </ul>
                 </div>
-                <p>Disque 100 - Disque Direitos Humanos</p>
-                <ul>
-                    <li>Disponível 24 horas por dia, 7 dias por semana</li>
-                    <li>Atendimento em português, espanhol e inglês</li>
-                    <li>Orientação sobre os direitos e serviços públicos</li>
-                    <li>Encaminhamento para outros serviços, quando necessário</li>
-                </ul>
-            </div>
-            <div>
-                <div>
-                    <img src="" alt="" />
-                    <h5>Delegacia Especializada ou Polícia Civil</h5>
+                <div class="secao">
+                    <div class="secao__titulo">
+                        <img src="assets/shield.png" alt="" />
+                        <h5>Delegacia Especializada ou Polícia Civil</h5>
+                    </div>
+                    <p class="paragrafo__baixo">Atendimento às vítimas de violência:</p>
+                    <ul>
+                        <li>Registro de Boletins de Ocorrência</li>
+                        <li>Solicitação de medidas protetivas de urgênci</li>
+                        <li>Suporte em investigações de violência ou de gênero</li>
+                        <li>Atendimento presencial ou online</li>
+                    </ul>
                 </div>
-                <p>Atendimento às vítimas de violência:</p>
-                <ul>
-                    <li>Registro de Boletins de Ocorrência</li>
-                    <li>Solicitação de medidas protetivas de urgênci</li>
-                    <li>Suporte em investigações de violência ou de gênero</li>
-                    <li>Atendimento presencial ou online</li>
-                </ul>
             </div>
-         </article>
+            
+        </article>
 
-         <footer>
-            <div>
-                <h5>Disque Denúncia</h5>
-                <ul>
-                    <li>Ligue 180 - Central de Atendimento.</li>
-                    <li>Disque 100 - Direitos Humanos</li>
-                    <li>Ligue 190 - Polícia Militar (Emergências) </li>
-                </ul>
-            </div>
-            <div>
-                <h5>Menu</h5>
-                <ul>
-                    <li>Inicio</li>
-                    <li>Sobre</li>
-                    <li>Contato</li>
-                </ul>
-            </div>
-            <div>
-                <h5>Desenvolvido Por:</h5>
-                <ul>
-                    <li>Davi Benegto</li>
-                    <li>Diego Vieira</li>
-                    <li>Gustavo Marques</li>
-                    <li>Kamila Garcia</li>
-                    <li>Miguel Ângelo</li>
-                    <li>Nicu</li>
-                    <li>Oséias QDaUToba</li>
-                </ul>
-            </div>
+        <footer>
+            <section class="footer__container">
+                <div>
+                    <h5>Disque Denúncia</h5>
+                    <ul>
+                        <li><span>Ligue 180 -</span> Central de Atendimento.</li>
+                        <li><span>Disque 100 -</span> Direitos Humanos</li>
+                        <li><span>Ligue 190 -</span> Polícia Militar (Emergências) </li>
+                    </ul>
+                </div>
+                
+                <div>
+                    <h5>Desenvolvido Por:</h5>
+                    <ul class="alunos">
+                        <li>Davi Benegto</li>
+                        <li>Diego Vieira</li>
+                        <li>Gustavo Marques</li>
+                        <li>Kamila Garcia</li>
+                        <li>Miguel Ângelo</li>
+                        <li>Nicolly</li>
+                        <li>Oséias</li>
+                    </ul>
+                </div>
+            </section>
          </footer>
     </main>
-    <script src=""></script>
+    <script src="script.js/script.js"></script>
 </body>
 </html>
