--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-Br">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css/gobal.css" />
     <link rel="stylesheet" href="styles.css/style.css" />
     <link rel="icon" type="image/png" href="" />
-    <title>Document</title>
+    <title>Juntos Contra a Violência Doméstica</title>
 </head>
 <body>
     <header>
@@ -112,7 +112,7 @@
                         <li>Davi Benegto</li>
                         <li>Diego Vieira</li>
                         <li>Gustavo Marques</li>
-                        <li>Kamila Garcia</li>
+                        <li>Kamila Reis</li>
                         <li>Miguel Ângelo</li>
                         <li>Nicolly Almeida</li>
                         <li>Oséias</li>
