--- a/index.html
+++ b/index.html
@@ -197,3 +197,11 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+<div class="conteudo">
+    <h1> Media Queries </h1>
+    <p>redimensione a janela do navegador para ver o efeito das medidas
+        <div class="grid-container">
+            <div class="grid-item vermelha"></div>
+            <div class="grid-item verde"></div>
+            <div class="grid-item amarela"></div>
+            <div class="grid-item roxa"></div>
