--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header>
         <nav>
-            <img class="logo" src="assets/logo_branco.png" alt="">
+            <a href="#inicio"><img class="logo" src="assets/logo_branco.png" alt=""></a>
             <ul>
-                <li><a href="">Início</a></li>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#contato">Contato</a></li>
                 <li class="liColorida"><a href="">Peça ajuda</a></li>
             </ul>
         </nav>
@@ -38,7 +38,10 @@
                         <h5>Como ajudar?</h5>
                     </div>
                     <p>Descubra maneiras eficazes de oferecer suporte a alguém em situação de violência.</p>
-                    <a href="" class="card__link">Leia mais</a>
+                    <div class="card__link">
+                        <a href="">Leia mais</a>
+                        <img src="assets/seta.png" alt="">
+                    </div>
                 </div>
 
                 <div class="card">
@@ -47,7 +50,10 @@
                         <h5>Sinais de alerta</h5>
                     </div>
                     <p>Aprenda a identificar comportamentos abusivos e situações de risco para prevenir a violência.</p>
-                    <a href="" class="card__link">Leia mais</a>
+                    <div class="card__link">
+                        <a href="" class="card__link__a">Leia mais</a>
+                        <img src="assets/seta.png" alt="">
+                    </div>
                 </div>
 
                 <div class="card">
@@ -56,12 +62,15 @@
                         <h5>Perfil do agressor</h5>
                     </div>
                     <p>Entenda os padrões de comportamento comuns em agressores para prevenir situações de risco.</p>
-                    <a href="" class="card__link">Leia mais</a>
+                    <div class="card__link">
+                        <a href="" class="card__link__a">Leia mais</a>
+                        <img src="assets/seta.png" alt="">
+                    </div>
                 </div>
            </div>
         </article>
 
-        <article class="help">
+        <article id="contato" class="help">
             <h4>Recursos de ajuda</h4>
             <p class="paragrafo__cima">Se você ou alguém que você conhece precisa de apoio, saiba que existem recursos confiáveis prontos para ajudar. Não hesite em buscar ajuda!"</p>
             <div class="help__container">
@@ -197,11 +206,3 @@
     <script src="js/script.js"></script>
 </body>
 </html>
-<div class="conteudo">
-    <h1> Media Queries </h1>
-    <p>redimensione a janela do navegador para ver o efeito das medidas
-        <div class="grid-container">
-            <div class="grid-item vermelha"></div>
-            <div class="grid-item verde"></div>
-            <div class="grid-item amarela"></div>
-            <div class="grid-item roxa"></div>
