--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="styles/gobal.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles.css/gobal.css" />
+    <link rel="stylesheet" href="styles.css/style.css" />
     <link rel="icon" type="image/png" href="" />
     <title>Juntos Contra a Violência Doméstica</title>
 </head>
