--- a/index.html
+++ b/index.html
@@ -206,3 +206,22 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
+
+<p class="resumo-ajuda">
+    Clique <span class="leia-mais ajuda">aqui</span> para saber como ajudar.
+</p>
+<div class="modal" id="modal-ajuda">
+    </div>
+
+<p class="resumo-alerta">
+    Clique <span class="leia-mais alerta">aqui</span> para saber os sinais de alerta.
+</p>
+<div class="modal" id="modal-alerta">
+    </div>
+
+<p class="resumo-agressor">
+    Clique <span class="leia-mais agressor">aqui</span> para saber o perfil do agressor.
+</p>
+<div class="modal" id="modal-agressor">
+    </div>
