Index.php atualizado, form.php tambem

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#inicio" class="nav-link">Início</a>
                     <a href="#sobre" class="nav-link">Sobre</a>
                     <a href="#contato" class="nav-link">Contato</a>
-                    <button onclick="openModal('modal-help')" class="btn-help">Peça Ajuda</button>
+                    <button onclick="openModal('modal-help')" class="btn-help" >Peça Ajuda</button>
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -236,7 +236,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Saiba como oferecer suporte a alguém que está passando por uma situação de violência.</p>
+                <p class="msgModal">Saiba como oferecer suporte a alguém que está passando por uma situação de violência.</p>
                 <h3>Passos para ajudar:</h3>
                 <ul class="modal-list">
                     <li>• Acredite na pessoa e ouça sem julgar.</li>
@@ -265,7 +265,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Reconheça os sinais de um relacionamento abusivo ou potencialmente violento.</p>
+                <p class="msgModal" >Reconheça os sinais de um relacionamento abusivo ou potencialmente violento.</p>
                 <h3>Fiquem atentos aos seguintes comportamentos:</h3>
                 <ul class="modal-list">
                     <li>• Controle excessivo sobre suas atividades, amizades ou finanças.</li>
@@ -294,7 +294,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Entenda os padrões de comportamento comuns em agressores para identificar sinais de alerta.</p>
+                <p class="msgModal">Entenda os padrões de comportamento comuns em agressores para identificar sinais de alerta.</p>
                 <h3>Características comuns:</h3>
                 <ul class="modal-list">
                     <li>• Comportamento controlador e possessivo.</li>
