--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <h3 class="footer-title">Desenvolvido Por:</h3>
                         <div class="credits-grid">
                             <div>Gustavo Marques</div>
-                            <div>Davi Benegto</div>
+                            <div>Davi Barbosa</div>
                             <div>Diego Vieira</div>
                             <div>Miguel Ângelo</div>
                             <div>Kamila</div>
@@ -184,7 +184,7 @@
                 </div>
 
                 <div class="footer-bottom">
-                    <p>© 2025 Desenvolvido por alunos da Uniamerica</p>
+                    <p>© 2025 Desenvolvido por alunos da Uniasselvi</p>
                 </div>
             </div>
         </footer>
